# ptyx-mcq-editor

./: .build_ui  Makefile  justfile  pyproject.toml
interfaces/: main.ui
ptyx_mcq_editor/: __main__.py  app.py  editor.py  editor_tab.py  editor_widget.py  enhanced_widget.py  events_handler.py  file_events_handler.py  files_book.py  find_and_replace.py  lexer.py  main.py  main_window.py  param.py  settings.py  signal_wake_up.py  tools.py
ptyx_mcq_editor/compilation/: QProgressIndicator.py  compiler.py  latex_viewer.py  log_lexer.py  log_viewer.py  pdf_viewer.py  publish.py  tab_widget.py  waitingspinnerwidget.py
ptyx_mcq_editor/editor/: editor_tab.py  editor_widget.py  find_and_replace.py  indicator_handlers.py  lexer.py  mcq_main_file_lexer.py
ptyx_mcq_editor/generated_ui/: about_ui.py  ask_for_saving_ui.py  dbg_send_scintilla_messages_ui.py  main_ui.py  make_ui.py
ptyx_mcq_editor/preview/: QProgressIndicator.py  compiler.py  latex_viewer.py  log_lexer.py  log_viewer.py  pdf_viewer.py  tab_widget.py
ptyx_mcq_editor/publish/: compiler.py  toolbar.py
ptyx_mcq_editor/tools/: desktop_shortcut.py  external_tools.py  python_code_tools.py
ptyx_mcq_editor/ui/: dbg_send_scintilla_messages_ui.py  find.py  find_and_replace.py  find_and_replace_ui.py  main.py  main_ui.py
ressources/: ptyx-mcq-editor.desktop
ressources/wait/: make_svg.py
tests/: test_compilation.py  test_desktop.py  test_lexer.py  test_main_app.py  test_ruff_interaction.py
ui/: about.ui  ask_for_saving.ui  dbg_send_scintilla_messages.ui  find.ui  find_and_replace.ui  main.ui  make.ui
