[tool.poetry]
name = "ptyx-mcq-editor"
version = "0.1.0"
description = ""
authors = ["Nicolas Pourcelot <nicolas.pourcelot@gmail.com>"]
readme = "README.md"
packages = [{include = "ptyx_mcq_editor"}]


[tool.poetry.scripts]
mcq-editor = "ptyx_mcq_editor.editor:main"

[tool.black]
line-length = 110

[tool.ruff]
line-length = 110


[tool.poetry.dependencies]
python = "^3.10"
pyqt6-qscintilla = "^2.14.1"
ptyx-mcq = "^25.0.0"
ptyx = "^25.0.1"

[tool.poetry.dev-dependencies]
ptyx-mcq = {path = "../ptyx-mcq", develop = true}
ptyx = {path = "../ptyx", develop = true}
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
