[project]
name = "ptyx-mcq-editor"
version = "1.1.0"
description = ""
authors = [{ name = "Nicolas Pourcelot", email = "nicolas.pourcelot@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "python",
    "tikz",
    "latex",
    "pdf",
    "exam",
    "mcq",
    "student",
    "gui",
]
dependencies = [
    "pyqt6-qscintilla>=2.14.1,<3",
    "ptyx-mcq>=30.0",
    "tomli-w>=1.0.0,<2",
    "ruff>=0.9.1,<0.10",
    "psutil>=7.0.0,<8",
]

[project.urls]
Repository = "https://github.com/wxgeo/ptyx-mcq-editor"

[project.scripts]
mcq-editor = "ptyx_mcq_editor.app:main"

[dependency-groups]
dev = [
    "mypy>=1.6.1,<2",
    "ptyx-mcq",
    "ptyx",
    "black>=24",
    "pytest>=7.4.3",
    "types-psutil>=7.0.0.20250218,<8",
    "python-semantic-release==7.28.1",
    "rust-just>=1.43.0",
    "pyqt6-stubs>=20250824",
]

[tool.uv]

[tool.uv.sources]
ptyx-mcq = { workspace = true, editable = true }
ptyx = { workspace = true, editable = true }

[tool.hatch.build.targets.sdist]
include = [
    "ptyx_mcq_editor",
    "ressources",
]

[tool.hatch.build.targets.wheel]
include = [
    "ptyx_mcq_editor",
    "ressources",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[tool.mypy]
implicit_optional = true
warn_redundant_casts = true
# enable_error_code = true
warn_unused_ignores = true
strict_equality = true
# Warning: exclude strings are handled as regex by mypy!
exclude = ["ptyx_mcq_editor/generated_ui/"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    'ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning',
    'ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning',
    'ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning',
]

[tool.black]
line-length = 110
extend-exclude = "ptyx_mcq_editor/generated_ui/.*"

[tool.ruff]
line-length = 110
extend-exclude = ["ptyx_mcq_editor/generated_ui/"]



[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
isolated_build = True
envlist = py311

[testenv]
passenv = HOME,DISPLAY,XAUTHORITY
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run ruff check ptyx_mcq_editor tests
    poetry run mypy ptyx_mcq_editor tests
    poetry run pytest tests
"""
